simplify vercel route

--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,8 @@
     { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
-    { "src": "/api/healthz", "dest": "backend/vercel.js" },
-    { "src": "/api/pastes", "methods": ["POST"], "dest": "backend/vercel.js" },
-    { "src": "/api/pastes/(.*)", "dest": "backend/vercel.js" },
-    { "src": "/p/(.*)", "dest": "backend/vercel.js" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/api/(.*)", "dest": "backend/vercel.js" },
+    { "src": "/p/(.*)",   "dest": "backend/vercel.js" },
+    { "src": "/(.*)",     "dest": "/index.html" }
   ]
 }
